Corrigido bug para caso de overflow de texto no chat

--- a/setup/static/chat-synthify.css
+++ b/setup/static/chat-synthify.css
@@ -95,10 +95,12 @@
 
 .response{
     height: 250px;
+    overflow: scroll;
 }
 
 .source{
     height: 90px;
+    overflow: scroll;
 }
 
 .response, .source {
